<resources>
    <string name="app_name">Consumer Github User\'s</string>
    <string name="nama_user">Username</string>
    <string name="lokasi">Location</string>
    <string name="nama_detail">Name</string>
    <string name="repository">Repository</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="location">Location</string>
    <string name="username_detail">Username</string>
    <string name="count_repository">10</string>
    <string name="count_followers">209</string>
    <string name="count_following">48</string>
    <string name="title_splash">Consumer Github User App</string>
    <string name="link">Link Github</string>
    <string name="hint_search">Github username</string>
    <string name="created_by">Create by Nuril Muslichin</string>
    <string name="logo_github">Logo Github</string>
    <string name="change_language">Change Language Settings</string>
    <string name="cari">Search</string>
    <string name="avatar_user">Avatar User</string>
    <string name="company">Company</string>
    <string name="username_not_found">Username not found</string>
    <string name="followers_blank">Followers Blank</string>
    <string name="following_blank">Following Blank</string>
    <string name="title_search">Please do a search!</string>
    <string name="text_search">The results will be updated automatically</string>
    <string name="cd_image_search">Image Search Illustration</string>
    <string name="nothing_followed">Nothing followed</string>
    <string name="nothing_following">Nothing followed</string>
    <string name="image_chevron_right">Chevron Right</string>
    <string name="image_user_favorite">Image User Favorite</string>
    <string name="sub_title_favorite">There is no favorite user yet</string>
    <string name="title_favorite">Please Select Your Favorite User</string>
    <string name="snackbar_no_user_favorite">There are no favorite users at this time</string>
    <string name="favorite">Favorite</string>
    <string name="success_add_favorite">Added user to favorite list</string>
    <string name="success_remove_favorite">Removed user from favorite list</string>
    <string name="id_reminder_preference">reminder_daily</string>
    <string name="id_changelang_preference">change_language</string>
    <string name="sumoff_reminder_preference">Reminder is disabled</string>
    <string name="sumon_reminder_preference">Notification will appear every 9 am</string>
    <string name="message_alarm">Good morning! Have you checked your GitHub user today?</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="toast_daily_active">Daily Reminder is Active</string>
    <string name="toast_daily_disabled">Daily Reminder is disabled</string>
    <string name="appwidget_text">List of User Favorites</string>
    <string name="empty_widget">No user favorites</string>
    <string name="sub_username_not_found">Please do a search for another username</string>
    <string name="button_favorite">Button Favorite</string>
</resources>