<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="65dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lay_list_users" />

        <LinearLayout
            android:id="@+id/ll_image_search_null"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@android:color/white"
            android:gravity="center"
            android:visibility="invisible">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@drawable/undraw_no_data"
                android:contentDescription="@string/cd_image_search" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username_not_found"
                android:textStyle="bold"
                android:textSize="16sp"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sub_username_not_found"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_image_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@android:color/white"
            android:gravity="center"
            android:visibility="visible">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@drawable/undraw_search"
                android:contentDescription="@string/cd_image_search" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_search"
                android:textStyle="bold"
                android:textSize="16sp"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_search"
                android:gravity="center"/>

        </LinearLayout>

        <ProgressBar
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:indeterminateTint="@color/colorPrimaryDark"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:visibility="gone" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:queryHint="@string/hint_search"
            android:background="@color/bgSearch"/>

    </LinearLayout>

</FrameLayout>