<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/avatar_user"
        android:id="@+id/img_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF909090"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/img_avatar"
        app:layout_constraintBottom_toTopOf="@id/txt_link"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="3dp"
        android:layout_marginStart="20dp"
        android:text="@string/nama_user"
        android:textSize="18sp"
        android:textStyle="bold"
        android:id="@+id/txt_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/img_avatar"
        app:layout_constraintTop_toBottomOf="@+id/txt_name"
        android:ellipsize="end"
        android:text="@string/link"
        android:id="@+id/txt_link"/>

</androidx.constraintlayout.widget.ConstraintLayout>