<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:elevation="4dp"
    app:cardCornerRadius="16dp"
    android:id="@+id/cv_item_user_favorite">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/avatar_user"
            android:id="@+id/img_avatar_favorite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:civ_border_width="4dp"
            app:civ_border_color="#FF909090"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/img_avatar_favorite"
            app:layout_constraintBottom_toTopOf="@id/txt_link_favorite"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="3dp"
            android:layout_marginStart="20dp"
            android:text="@string/nama_user"
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/txt_name_favorite"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@+id/img_avatar_favorite"
            app:layout_constraintTop_toBottomOf="@+id/txt_name_favorite"
            android:ellipsize="end"
            android:text="@string/link"
            android:id="@+id/txt_link_favorite"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/image_chevron_right"
            android:src="@drawable/ic_chevron_right"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>